kubernetes/apps/observability/grafana/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow traffic from ingress (envoy)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
    # Allow traffic from Prometheus
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
